# TradingPlot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_bot.py
src/kucoin_bot/: __init__.py  bot.py  config.py
src/kucoin_bot/api/: __init__.py  client.py
src/kucoin_bot/risk_management/: __init__.py  adaptive_settings.py  position_manager.py  risk_controller.py
src/kucoin_bot/strategies/: __init__.py  ai_predictor.py  arbitrage.py  base.py  scalping.py  strategy_manager.py  trend_following.py
src/kucoin_bot/utils/: __init__.py  indicators.py  market_analyzer.py
tests/: __init__.py  test_adaptive_settings.py  test_api_client.py  test_indicators.py  test_market_analyzer.py  test_risk_management.py  test_strategies.py
